Add more useful data in Media and set inheritance

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.data.rest.base-path=/api
+spring.data.rest.base-path=/data
 server.port=5000
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+#completed
+#reading, watching (books, shows respectively)
+#plan to
