Create repositories to handle DAO relationship logic

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.data.rest.base-path=/data
 server.port=5000
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 #completed
 #reading, watching (books, shows respectively)
