--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 server.port=5000
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.data.jpa.repositories.enabled=true
+spring.datasource.url=jdbc:mysql://aa1jup58hrwj1yd.ctxwwmfr1gkx.us-east-1.rds.amazonaws.com/ebdb
+spring.datasource.username=mediarchive
+spring.datasource.password=mediarchive
+#MySQL5Dialect
+
 #completed
 #reading, watching (books, shows respectively)
 #plan to
