Added correct domain schemas and statistics implementation

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,12 @@
+spring.profiles.active=secret, default
 server.port=5000
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.data.jpa.repositories.enabled=true
-spring.datasource.url=jdbc:mysql://aa1jup58hrwj1yd.ctxwwmfr1gkx.us-east-1.rds.amazonaws.com/ebdb
-spring.datasource.username=mediarchive
-spring.datasource.password=mediarchive
+
+#UPDATE IF USING AWS ENVIRONMENT / REMOVE OTHERWISE
+spring.datasource.url=${data.secret.url}
+spring.datasource.username=${data.secret.username}
+spring.datasource.password=${data.secret.password}
