--- a/server/pom.xml
+++ b/server/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>querydsl-jpa</artifactId>
             <version>4.0.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.7.5</version>
+        </dependency>
     </dependencies>
 
     <build>
