--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,7 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "style-loader": "^0.19.0"
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "react-scripts": "1.0.17"
