Finish get/add/delete methods for movie/show/book

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.data.jpa.repositories.enabled=true
 spring.datasource.url=${data.secret.url}
 spring.datasource.username=${data.secret.username}
 spring.datasource.password=${data.secret.password}
+spring.api.key=${api.key}
