--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "base-64": "^0.1.0",
     "bootstrap": "^4.0.0-beta.2",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.9",
     "qs": "^6.5.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
