--- a/server/pom.xml
+++ b/server/pom.xml
@@ -52,6 +52,11 @@
             <version>1.0.0.Final</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-apt</artifactId>
             <version>4.0.6</version>
