--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,12 @@
 {
   "name": "mediarchive",
+  "homepage": "https://jmbuck.github.io/mediarchive",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "base-64": "^0.1.0",
     "bootstrap": "^4.0.0-beta.2",
+    "gh-pages": "^1.1.0",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.9",
     "qs": "^6.5.1",
@@ -17,6 +19,8 @@
     "react-scripts": "1.0.17"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
