--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 spring.profiles.active=secret, default
-server.port=5000
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.data.jpa.repositories.enabled=true
+
+#SSL CERTIFICATION
+server.port=5000
+security.require-ssl=true
+server.ssl.key-store: ${ssl.key-store.path}
+server.ssl.key-store-password: ${ssl.key-store.password}
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: ${ssl.key-store.alias}
 
 #UPDATE IF USING AWS ENVIRONMENT / REMOVE OTHERWISE
 spring.datasource.url=${data.secret.url}
